--- a/app/src/main/res/layout/activity_lock.xml
+++ b/app/src/main/res/layout/activity_lock.xml
@@ -20,14 +20,14 @@
                 android:layout_width="15dp"
                 android:layout_height="15dp"
                 android:layout_margin="5dp"
-                android:background="@drawable/bg_view_grey"/>
+                android:background="@drawable/circle"/>
 
             <View
                 android:id="@+id/view_02"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
                 android:layout_margin="5dp"
-                android:background="@drawable/bg_view_grey"
+                android:background="@drawable/circle"
                 />
 
             <View
@@ -35,14 +35,14 @@
                 android:layout_width="15dp"
                 android:layout_margin="5dp"
                 android:layout_height="15dp"
-                android:background="@drawable/bg_view_grey"/>
+                android:background="@drawable/circle"/>
 
             <View
                 android:id="@+id/view_04"
                 android:layout_width="15dp"
                 android:layout_margin="5dp"
                 android:layout_height="15dp"
-                android:background="@drawable/bg_view_grey"/>
+                android:background="@drawable/circle"/>
 
         </LinearLayout>
 
